--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
 }
 
 body {
+  width: 100%;
   background-color: #f2f2f2;
   display: flex;
   justify-content: center;
@@ -82,8 +83,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 222px;
-  width: 311px;
+  max-height: 222px;
+  max-width: 311px;
   padding: 1.5rem;
   box-shadow: 0 4px 6px 0 var(--Grayish-Blue), 0 1px 1px 0 var(--Grayish-Blue);
   border-radius: 0.4rem;
@@ -105,5 +106,40 @@ body {
 .card img {
   height: 57px;
   width: 57px;
+  margin: 1rem;
   align-self: flex-end;
+}
+
+@media (min-width: 1100px) {
+  body {
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-family: "Poppins", "sans-serif";
+  }
+  .main-container {
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header-container {
+    text-align: center;
+    width: 35%;
+    min-width: 311px;
+  }
+
+  .cards-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .card {
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
 }
