--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ body {
 
 @media (min-width: 1100px) {
   body {
+    height: 100vh;
     background-color: #f2f2f2;
     display: flex;
     justify-content: center;
